# nju-traffic-practicum-coursework

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  NOTICE.md  README.md  build_upload_diy_package.py  pyproject.toml  requirements.txt  tencentarena_doc_1704.html  train_test.py  初始化说明.md  实验记录与下一步计划.md  腾讯开悟网页同步说明.md  训练评测协作模板.md
.codex/skills/kaiwu-diy-upload/: SKILL.md
.github/workflows/: package-check.yml
PI-eLight-main/PI-eLight-main/: 00_run_tiny_light.py  01.5_baseline_transfer.py  01_run_baseline.py  02_run_MCTS.py  03_run_viper.py  04_run_universal_light.py  config.json  readme.md
PI-eLight-main/PI-eLight-main/agent/: __init__.py  base_agent.py
PI-eLight-main/PI-eLight-main/env/: TSC_env.py  intersection.py  phase.py  road_link.py
PI-eLight-main/PI-eLight-main/utilities/: UniTSA_runner.py  snippets.py  utils.py
agent_diy/: agent.py
agent_diy/algorithm/: algorithm.py
agent_diy/conf/: conf.py
agent_diy/model/: model.py
agent_diy/workflow/: train_workflow.py
agent_ppo/: agent.py
agent_ppo/algorithm/: algorithm.py
agent_ppo/conf/: conf.py  train_env_conf.toml
agent_ppo/feature/: definition.py
agent_ppo/model/: model.py
agent_ppo/workflow/: train_workflow.py
automation/: __init__.py  build_diy_sync_batch.py  build_sync_batch.py  sync_manifest.py
conf/: app_conf_intelligent_traffic_lights.toml
conf/kaiwudrl/: actor.toml  aisrv.toml  client.toml  configure.toml  learner.toml  monitor.yaml
upload_diy_minimal/: DIY最小上传说明.md  kaiwu.json  train_test.py
upload_diy_minimal/agent_diy/: agent.py
upload_diy_minimal/agent_diy/conf/: conf.py  train_env_conf.toml
upload_diy_minimal/agent_diy/feature/: definition.py
upload_diy_minimal/conf/: algo_conf_intelligent_traffic_lights.toml  configure_app.toml
(+24 files in other folders)
